-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: port-stage-aarch64
-
Component/s: hotspot
-
None
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8074234 | 9 | Andrew Haley | P4 | Resolved | Fixed | b54 |
| JDK-8082960 | emb-9 | Andrew Haley | P4 | Resolved | Fixed | team |
We need to apply this fix to AArch64
- backported by
-
JDK-8074234 AARCH64: Apply 8068655 frame::safe_for_sender() computes incorrect sender_sp value for interpreted frames
-
- Resolved
-
-
JDK-8082960 AARCH64: Apply 8068655 frame::safe_for_sender() computes incorrect sender_sp value for interpreted frames
-
- Resolved
-
- relates to
-
JDK-8068655 frame::safe_for_sender() computes incorrect sender_sp value for interpreted frames
-
- Resolved
-