8071947: AARCH64: frame::safe_for_sender() computes incorrect sender_sp value for interpreted frames

Apply the fix for 8068655 to the AArch64 sources.

Reviewed-by: kvn